# AcademicProjects

JNP/zadanie1/: opp.cc
JNP/zadanie2/: cmaptel  create_test01.c  create_test02.c  delete_test01.c  delete_test02.c  erase_test01.c  insert_test01.c  insert_test02.c  insert_test03.c  insert_test04.c  maptel.cc  maptel.h  maptel_test1.c  multiple_test01.c  test01.c  transform_test01.c  transform_test02.c  transform_test03.c  transform_test04.c  wrong_parameters_test01.c  wrong_parameters_test02.c  wrong_parameters_test03.c  wrong_parameters_test04.c
JNP/zadanie3/: CMakeLists.txt  fb.cc  main.cc  very_long_int.cc  very_long_int.h  very_long_int_tresc.txt
JNP/zadanie4/: compile_clang.sh  compile_test.sh  pizza.cc  pizza.hh  pizza_tresc.txt  test_pizza.sh
JNP/zadanie5/: CMakeLists.txt  main.cc  marek.cc  priorityqueue.hh  priorityqueue_tresc.txt
JNP/zadanie6/jnp-6/: .clang-format  AccountInfo.h  AccountRegistry.cpp  AccountRegistry.h  Bank.cpp  Bank.h  BankAccount.cpp  BankAccount.h  BankBuilder.cpp  BankBuilder.h  BankExchangeTable.cpp  BankExchangeTable.h  CMakeLists.txt  CurrencyTypes.h  GwiezdnaKomisjaBankowa.cpp  GwiezdnaKomisjaBankowa.h  History.cpp  History.h  IdType.cpp  IdType.h  InterstellarClock.cpp  InterstellarClock.h  Person.h  Planets.cpp  Planets.h  Utils.h  currency_account_test.cpp  gsb.h  gsb_example.cpp  gsb_test01.cpp  gsb_test01.out  gsb_test02.cpp  gsb_test_transform.py  planet_person_test.cpp
JNP/zadanie7/: CMakeLists.txt  banaszkiewicz_test1.cpp  bst.h  bst_imp.h  bst_tresc.txt  kuba_test1.cpp  piotr_test1.cpp
PO/BitwaNaTeksty/src/: CountProcessor.java  FileTextSource.java  FileTextSourceFactory.java  Filter.java  Processor.java  (+7 more)
PO/FormalGrammars/: README.TXT
SO/Archeo/: CMakeLists.txt  Makefile  README  better_string.c  better_string.h  constants.h  input_stream.c  input_stream.h  message_buffer.c  message_buffer.h  message_queue.c  message_queue.h  mutex_and_signal.c  mutex_and_signal.h  safe_memory_operations.c  safe_memory_operations.h  safe_utility.c  safe_utility.h  signals.c  signals.h  string_builder.c  string_builder.h  system_headers.h  thread.c  thread.h  utility.c  utility.h
SO/Archeo/bank/: bank.c  bank.h
SO/Archeo/firma/: activity_suspender.c  activity_suspender.h  firma.c  firma.h  worker.c  worker.h
SO/Archeo/muzeum/: delegate.c  delegate.h  muzeum.c  muzeum.h  tables_operations.c  tables_operations.h
SO/ONP/: CMakeLists.txt  Makefile  ToONP.c  W.c  better_string.c  better_string.h  input_stream.c  input_stream.h  process_handle.c  process_handle.h  safe_memory_operations.c  safe_memory_operations.h  string_builder.c  string_builder.h  to_onp_algorithm.c  to_onp_algorithm.h  vector.c  vector.h
(+8 files in other folders)
